added video test

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
 <body>
 
+<video autoplay loop id="video-background" muted>
+  <source src="images/glitch.mp4" type="video/mp4">
+</video>
 
 
 
