laptop query changes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 		<div class="workCenter">
 
-			<video width="1080" height="640" controls poster="images/ccp/eve_video_poster.png">
+			<video width="1080" height="640" controls poster="images/ccp/dust514.png">
 				<source src="images/ccp/dust514.mp4" type="video/mp4">
 			</video>
 
@@ -85,7 +85,7 @@
 				<img src="images/ccp/dustshot06.jpg">
 				<img src="images/ccp/dustshot07.jpg">
 				<img src="images/ccp/dustshot08.jpg">
-				<img src="images/ccp/poster.jpg">
+				<img src="images/ccp/dust10.jpg">
 			</div>
 
 			<div id="custom-pager2" class="center"></div>
@@ -193,8 +193,8 @@
 
 		<div class="workCenter">
 
-			<video width="1080" height="640" controls poster="images/limbic/ZGlogoPoster3.png">
-				<source src="images/limbic/161024_zgs_video_ad.mp4" type="video/mp4">
+			<video width="1080" height="640" controls poster="images/limbic/zgs.png">
+				<source src="images/limbic/zgs.mp4" type="video/mp4">
 			</video>
 
 			<div class="cycle-slideshow" 
@@ -432,7 +432,7 @@
 
 <!-- javascript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="js/jquery.vide.js"></script>
+<script src="js/jquery.vide.min.js"></script>
 <script src="http://malsup.github.com/jquery.cycle2.js"></script>
 <script type="text/javascript" src="js/scripts.js"></script>
 
